crates/oxc_linter_rules/src/snapshots/eslint_no_unused_vars@oxc-exports.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ eslint(no-unused-vars): Identifier 'b' is imported but never used.
   ╭─[no_unused_vars.tsx:1:15]
 1 │ import { a as b } from 'a'; export { a }
   ·               ┬
   ·               ╰── 'b' is imported here
   ╰────
  help: Consider removing this import.

  ⚠ eslint(no-unused-vars): Identifier 'resolve' is imported but never used.
   ╭─[no_unused_vars.tsx:1:10]
 1 │ import { resolve } from "path";
   ·          ───┬───
   ·             ╰── 'resolve' is imported here
 2 │ export { resolve } from "path";
   ╰────
  help: Consider removing this import.
