crates/oxc_linter_rules/src/snapshots/eslint_no_unused_vars@oxc-functions.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ eslint(no-unused-vars): Function 'foo' is declared but never used.
   ╭─[no_unused_vars.tsx:1:10]
 1 │ function foo() {}
   ·          ─┬─
   ·           ╰── 'foo' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Function 'foo' is declared but never used.
   ╭─[no_unused_vars.tsx:1:10]
 1 │ function foo() { foo() }
   ·          ─┬─
   ·           ╰── 'foo' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Function 'bar' is declared but never used.
   ╭─[no_unused_vars.tsx:1:30]
 1 │ const foo = () => { function bar() { } }
   ·                              ─┬─
   ·                               ╰── 'bar' is declared here
 2 │ foo()
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Parameter 'interpolations' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:3:49]
 2 │         export function log(message: string, ...interpolations: unknown[]): void;
 3 │         export function log(message: string, ...interpolations: unknown[]): void {
   ·                                                 ───────┬──────
   ·                                                        ╰── 'interpolations' is declared here
 4 │             console.log(message);
   ╰────
  help: Consider removing this parameter.

  ⚠ eslint(no-unused-vars): Parameter 'messages' is declared but never used. Unused parameters should start with a '_'.
   ╭─[no_unused_vars.tsx:2:32]
 1 │ 
 2 │         export function log(...messages: unknown[]): void {
   ·                                ────┬───
   ·                                    ╰── 'messages' is declared here
 3 │             return;
   ╰────
  help: Consider removing this parameter.
