crates/oxc_linter_rules/src/snapshots/eslint_no_unused_vars@oxc-type-aliases.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ eslint(no-unused-vars): Type alias 'Foo' is declared but never used.
   ╭─[no_unused_vars.tsx:1:6]
 1 │ type Foo = Foo
   ·      ─┬─
   ·       ╰── 'Foo' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Type alias 'Foo' is declared but never used.
   ╭─[no_unused_vars.tsx:1:6]
 1 │ type Foo = Array<Foo>
   ·      ─┬─
   ·       ╰── 'Foo' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Type alias 'Unbox' is declared but never used.
   ╭─[no_unused_vars.tsx:1:6]
 1 │ type Unbox<B> = B extends Box<infer R> ? Unbox<R> : B
   ·      ──┬──
   ·        ╰── 'Unbox' is declared here
   ╰────
  help: Consider removing this declaration.

  ⚠ eslint(no-unused-vars): Variable 'R' is declared but never used. Unused variables should start with a '_'.
   ╭─[no_unused_vars.tsx:1:36]
 1 │ export type F<T> = T extends infer R ? /* R not used */ string : never
   ·                                    ┬
   ·                                    ╰── 'R' is declared here
   ╰────
  help: Consider removing this declaration.
